# Crypto-fund

./: .gitignore  .replit  README.md  alembic.ini  app.py  components.py  db_init.py  init_db.py  models.py  pyproject.toml  run_api.py  utils.py
.streamlit/: config.toml
api/: app.py  utils.py
contracts/: Campaign.sol
migrations/: env.py
migrations/versions/: eba5109fbdc8_initial.py
pages/: campaign_details.py  create_campaign.py  dashboard.py  explore.py
